--- a/app/css/homepage.css
+++ b/app/css/homepage.css
@@ -56,6 +56,7 @@ ul>li>a.nav-link:hover {
     background: url("../../app/images/Group%2047.png") no-repeat;
     min-height: 1200px;
     background-size: cover;
+    background-color: #fafafa;
 }
 
 .section-one {
@@ -95,6 +96,7 @@ h4 {
     padding-left: 10px;
     padding-right: 10px;
     color: #707070;
+    background: #fff;
 }
 
 .text-color {
@@ -126,13 +128,14 @@ h4 {
 }
 
 .circular-img>img {
-    width: 80px;
-    margin-left: 8px;
+    width: 75%;
+    margin-left: 4px;
+    margin-bottom: 4px;
 }
 
 .four-pillars {
     text-align: center;
-    margin-top: 75px;
+    padding-top: 75px;
     color: #707070;
 }
 
@@ -146,6 +149,7 @@ h4 {
     height: 200px;
     text-align: center;
     padding-top: 30px;
+    background: #fff;
 }
 
 .img-box>img {
@@ -165,27 +169,48 @@ h4 {
     margin: 0 auto;
     margin-top: 50px;
 }
+.section-three .row .col-sm-3{
+    margin: 0 25px;
+}
 
 .row-two {
     margin-top: 40px;
+    position: relative;
 }
-
+.row-two .mid-cycle{
+    position: absolute;
+    top: -60%;
+    left: -30%;
+}
+.row-two .mid-cycle.right{
+    left: 95%;
+}
+.row .fa{
+    position: absolute;
+    right: 0;
+    top: 50%;
+}
+.row .fa.fa-chevron-left{
+    right: 100%;
+}
 .img-review {
-    width: 100px;
+    width: 150px;
 }
 
 .mid-section {
     display: -webkit-box;
-    margin-top: 40px;
+    margin: 40px auto;
     border: 1px solid white;
-    padding-top: 20px;
+    padding: 20px 60px;
     background-color: white;
-    padding-left: 140px;
+    width: 100%;
 }
 
 .text-area {
-    margin-left: 50px;
+    margin-left: 80px;
     margin-top: 10px;
+    font-size: 26px;
+    letter-spacing: 2px;
 }
 
 div.section-four>div.row>div.col-sm-4>div.img-box>img {
@@ -248,9 +273,22 @@ div.section-four>div.row>div.col-sm-4>div.img-box>img {
     padding-right: 10px;
     padding-top: 30px;
     margin: 0 auto;
+    background: #fff;
 }
 
 .write-a-msg {
     padding: 20px;
     width: 365px;
+}
+.carousel-indicators li{
+    background-color: #dcdcdc;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
+.carousel-indicators .active {
+    background-color: #808080;
+}
+.carousel-item div {
+    display: inline-block;
 }
