--- a/app/css/homepage.css
+++ b/app/css/homepage.css
@@ -369,3 +369,19 @@ div.section-four>div.row>div.col-sm-4>div.img-box>img {
 .row .img-ctr{
     z-index: 3;
 }
+.back-to-home{
+    text-decoration: none;
+    color: #6B6B6B;
+    border: 1px solid #707070;
+    padding: 0.5%;
+    border-radius: 30px;
+    display: inline-block;
+    margin: 30px 0 0 30px;
+}
+.view-project-btn, .view-project-btn:hover{
+    float: right;
+    background: #fff;
+    border: 1px solid #92D400;
+    border-radius: 30px;
+    color: #92D400;
+}
