--- a/app/css/projectpage.css
+++ b/app/css/projectpage.css
@@ -51,7 +51,7 @@
     }
     
     .background {
-        background:url("Group 86.png") no-repeat;
+        background:url("../../app/images/Group 86.png") no-repeat;
         background-size:1300px;
         height:1000px;
     }
