--- a/app/css/common.css
+++ b/app/css/common.css
@@ -23,3 +23,15 @@ ul>li>a.nav-link:hover {
 .navlogo {
     height: 36px;
 }
+.btn-success {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    margin-top: 2px;
+    background-color: #92D400;
+    width: 100px;
+    height: 30px;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 0.35rem 0.25rem;
+    border-radius: 9px;
+}
